# grants-stack-search

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.txt  README.md  fly.production.toml  fly.toml  pyproject.toml
.github/workflows/: deploy-branch.yml
docs/: notes.md
src/: app.py  cli.py  config.py  data.py  main.py  search.py  search_fulltext.py  search_hybrid.py  search_query.py  search_semantic.py  util.py
src/scripts/: applications_downloader.py
static/: index.html
tests/: conftest.py  test_data.py  test_experiments.py  test_load.py  test_query.py  test_search.py  test_util.py
tests/fixtures/: preprocessed_aggregated_applications.json  sample-projects.json  search_results_fulltext_black_hare.pickle  search_results_fulltext_blck_hare.pickle  search_results_fulltext_education.pickle  search_results_fulltext_nature_preservation.pickle  search_results_semantic_black_hare.pickle  search_results_semantic_blck_hare.pickle  search_results_semantic_education.pickle  search_results_semantic_nature_preservation.pickle
tests/fixtures/sample_applications_by_round/: 0x10be322DE44389DeD49c0b2b73d8c3A1E3B6D871.json  0xc5FdF5cFf79e92FAc1d6Efa725c319248D279200.json
tests/fixtures/search_results/: fulltext_black_hare.pickle  fulltext_blck_hare.pickle  fulltext_education.pickle  fulltext_nature_preservation.pickle  semantic_black_hare.pickle  semantic_blck_hare.pickle  semantic_education.pickle  semantic_nature_preservation.pickle
